--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^3.3.5",
     "express": "^4.13.3",
     "jade": "^1.11.0",
-    "mongoose": "^4.1.8"
+    "mongoose": "^4.1.8",
+    "socket.io": "^1.3.7"
   }
 }
